<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ct10_title">チケット検索</string>
    <string name="mn10_title">MENU</string>
    <string name="tp10_title">スケジュール</string>
    <string name="my10_title">Myチケット</string>
    <string name="next_month">Next Month</string>
    <string name="privios_month"> Previous Month </string>
    <string name="search_hint">Search</string>
    <string name="this_week">This Week</string>
    <string name="next_week">Next Week</string>
    <string name="this_month">This Month</string>
    <string name="not_found_data">NO DATA AVAILABLE</string>
    <string name="how_to_play">How to Play</string>
    <string name="new_text">NEWS</string>
    <string name="ticket_can_be_use">unused</string>
    <string name="ticket_invalid">Used / Invalid</string>
    <string name="used">Already used</string>
    <string name="invalid">Invalid</string>
    <string name="booth">Booth</string>
    <string name="event_item">Event Item</string>
    <string name="period">Period</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_and_time">Date and Time</string>
    <string name="ticket_on_sales">Ticket Sales</string>
    <string name="note">Notes</string>
    <string name="what_is_a_group_ticket">What is a group ticket？</string>
    <string name="time_limit">Time limit</string>
    <string name="sales_catch">Sales catch</string>
    <string name="Advance_ticket_privilege">Advance ticket privilege</string>
    <string name="coupon">クーポン</string>
    <string name="riddle">Riddle</string>
    <string name="badge">Badge</string>
    <string name="access">Access</string>
    <string name="logout">Logout</string>
    <string name="Login_logout_member_registration">Login／Member Registration</string>
    <string name="change_member_info">Change member info</string>
    <string name="total">Total number</string>
    <string name="opening">Opening</string>
    <string name="until">Expire on</string>
    <string name="usage_period">Usage period</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="available">Available</string>
    <string name="only_a_few_left">Only a few left</string>
    <string name="sold_out">Sold out</string>
    <string name="number_of_ppl_per_team">Number of ppl per team</string>
    <string name="ok">Ok</string>
    <string name="open_time">Open time:</string>
    <string name="date_time">Date Time:</string>
    <string name="purchase_number">Purchase number</string>
    <string name="release_date">Event Date</string>
    <string name="no_internet">No internet connection</string>
    <string name="get_coupon">Share app and get coupon</string>
    <string name="invite_your_friends">Invite friend and have fun together</string>
    <string name="enter_invite_code">Enter invitation code</string>
    <string name="sns">Share on SNS and friends</string>
    <string name="sns_get_sns">Share this app on SNS and with friends and get coupon !</string>
    <string name="sns_2">Share this app on SNS and send to friends and get coupon !</string>
    <string name="coupon_get">You got coupon</string>
    <string name="coupon_2_get">You get coupon only 1 time</string>
    <string name="sns_3">Coupon is dilivered when you share on SNS or share with friends by sending the link from with button.</string>
    <string name="tmc_text_1">Invite friends to</string>
    <string name="tmc_text_2">app and have fun together</string>
    <string name="sns_iv20">Your friends get coupon when they input your invitation code in the app</string>
    <string name="sns_2_iv20">Your friends get coupon after you invite them!</string>
    <string name="invite_friends">Invite friends</string>
    <string name="enter_invite_code_and_get_coupon">Enter invite code and get coupon！</string>
    <string name="invite_text2">Enter coupon code  you got from friends and get coupon</string>
    <string name="invite_code_invalid">Invalid invitation code</string>
    <string name="check_code_again">Please check code again.\n You can use coupon only once</string>
    <string name="you_got_coupon">You got coupon</string>
    <string name="check_menu_and_get_coupon">You can check from Menu</string>
    <string name="send">Send</string>
    <string name="enter_invite_code_got_from_friends">Enter invite code got from friends !</string>
    <string name="coupon_code">Coupon code</string>
    <string name="available_term">Available term</string>
    <string name="condition">Condition</string>
    <string name="coupon_get_already">You have got coupon already</string>
    <string name="copy_link">リンクをコピー</string>
    <string name="open_browser">ブラウザで開く</string>
    <string name="share_via">共有する</string>
    <string name="members_in_advance">団員先行中</string>
    <string name="is_attention">重要なお知らせ</string>
    <string name="tap_to_retry">再試行するにはタップしてください</string>
    <string name="retry">リトライ</string>
    <string name="not_ticket">チケットがありません</string>
    <string name="when_you_buy_a_ticket_it_will_appear_here">チケットを購入するとここに表示されます</string>
    <string name="event_not_found">イベントが見つかりません。</string>
    <string name="please_change_the_conditions_and_search">条件を変えて検索してください</string>
    <string name="tokyo_mystery_circus_no_data">Tokyo Mystery Circusのニュースがあると このページでお知らせします。</string>
    <string name="in_preparation">準備中</string>
    <string name="can_not_get_user_info">ユーザー情報を取得できません</string>
    <string name="for_member">団員向け</string>
    <string name="no_coupon">クーポンがありません。</string>
    <string name="reget_coupon">クーポンをGetするとここに表示されます</string>
    <string name="sales_end">販売終了</string>
    <string name="lo_text">会員登録・ログインすると  Myチケットで入場したり、クーポンを利用できます</string>
    <string name="invalid_invite_code">有効な招待コードを入力してください</string>
    <string name="time">時間</string>

    <string name="processing">処理中</string>
    <string name="ticket_cancel">キャンセル</string>
    <string name="un_used">未使用</string>
    <string name="ticket_offline_msg">オフラインモードでチケットを表示中</string>
    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="default_notification_channel_id">notification id</string>
    <string name="food">フード</string>
    <string name="goods">グッズ</string>
    <string name="inquiry">お問い合わせ</string>
    <string name="copy_coupon_code_to_clipboard">クーポンコードがコピーされました</string>
    <string name="date_ticket_detail">開催日</string>
    <string name="enter_invite_code_and_get_coupon_iv">招待コードを入力しよう</string>
    <string name="available_term_adapter">利用期間:</string>

</resources>
