<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_coupon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tp_top_bg"
    android:orientation="vertical"
    tools:context="eplus.scrap.view.MyTicketFragment">


    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tp_top_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1254c4">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                />
            <ImageButton
                android:id="@+id/ic_left_bt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@color/transparent"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_left"
                />
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/coupon"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/re_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white"
            android:clickable="true"
            android:visibility="visible"
            android:focusable="true"
            android:orientation="vertical"
            android:gravity="center_vertical"

            >
            <LinearLayout
                android:id="@+id/line_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/TMC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/my_awesome_toolbar"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tmc_text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TMC"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="@string/lo_text"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_11sdp" />
                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/round_rect_button"
                    android:text="ログイン・会員登録"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>


        </LinearLayout>
        <RelativeLayout
                android:id="@+id/re_invite_coupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rect_border_black_bg"
                android:visibility="gone"
                >
                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/arrow_right_black"
                    />
                <LinearLayout
                    android:id="@+id/line_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/my_awesome_toolbar"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="center"
                        android:text="@string/enter_invite_code_and_get_coupon"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:gravity="center"
                        android:text="@string/enter_invite_code_got_from_friends"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/invite_code_invalid"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="center"
                            android:text="@string/check_code_again"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="12sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line_msg_success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/you_got_coupon"
                            android:textColor="#1254c4"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="center"
                            android:text="@string/check_menu_and_get_coupon"
                            android:textColor="#1254c4"
                            android:textSize="12sp"
                            android:textStyle="normal" />
                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/re_no_internet_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ededed"
            android:paddingBottom="@dimen/_35sdp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="visible"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/clumsy_lagre"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/transparent"
                    android:text="@string/no_internet"
                    android:textAlignment="center"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:visibility="visible"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/transparent"
                    android:text="@string/tap_to_retry"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"
                    />
                <LinearLayout
                    android:id="@+id/line_bt_retry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_26sdp"
                    android:layout_marginRight="@dimen/_26sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/backround_rect_blue_color"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingTop="@dimen/_12sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_retry"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:gravity="center"
                        android:text="@string/retry"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold"
                        />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/line_nodata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ededed"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_35sdp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/thumb_cp10_my10_no_data" />

            <TextView
                android:id="@+id/tv_errmsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/transparent"
                android:text="@string/no_coupon"
                android:textAlignment="center"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="visible"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/transparent"
                android:text="@string/reget_coupon"
                android:textAlignment="center"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible"

                />
        </LinearLayout>
        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible"
            >
        <ListView
            android:id="@+id/list_coupon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e9e9e9"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/_4sdp"
            android:listSelector="@android:color/transparent"
            android:paddingTop="@dimen/_8sdp"
            tools:listitem="@layout/coupon_item"
            >

        </ListView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>




</RelativeLayout>
