<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ticket_used_bg"
    tools:context="eplus.scrap.view.TicketDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_awesome_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d2d0d1"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/coupon"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </android.support.v7.widget.Toolbar>
        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="君は明日と消えていった "
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_weight="0.5"
                android:textSize="10pt"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_toStartOf="@+id/tv_status"
                 />
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:layout_marginTop="2dp"
                android:text="@string/used"
                android:textSize="8pt"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

        </RelativeLayout>
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ticket_n"></ImageView>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="君は明日と消えていった"
            android:textAlignment="center"
            android:textSize="10pt"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="君は明日と消えていった"
            android:textAlignment="center"
            android:textSize="8pt"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:ellipsize="end"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/usage_period"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/tv_expire_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/terms_of_use"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/tv_use_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/note"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/used"
            android:textSize="12pt"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</ScrollView>
