<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="eplus.scrap.view.tourdetail.PlayFormatFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:tint="@color/tint_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_ppl_per_team"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:tint="@color/tint_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_limit"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:tint="@color/tint_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/wv_how_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</ScrollView>
